--- a/travel-tips.html
+++ b/travel-tips.html
@@ -3,12 +3,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miss Swan Travels</title>
+    <title>Travel Tips</title>
 </head>
 <body>
-    
-<h1>Travel Tips</h1>
+    <h1>Travel Tips</h1>
+    <section>
+        <nav>
+            <a href="home.html">Main page</a>
+           
+        </nav>
 
+    </section>
 <h2>Solo travel tips</h2>
 
 <p>Solo travel can be an incredibly rewarding and enriching experience. Here are some tips to make the most of your solo adventures:</p>
@@ -58,6 +63,5 @@
     <li>Enjoy Quality Family Time: Remember that family travel is about spending quality time together. Embrace the moments, disconnect from technology when possible, and create lasting memories as a family.</li>
 
 </ul>
-
 </body>
 </html>
